:alien: Ajoute des traductions

--- a/mon-entreprise/source/locales/ui-en.yaml
+++ b/mon-entreprise/source/locales/ui-en.yaml
@@ -30,6 +30,7 @@ Chômage partiel: Partial unemployment
 Code d'intégration: Integration Code
 Commencer: Get started
 "Commerçant, artisan, ou libéral ?": Trader, craftsman, or liberal?
+Commune ou code postal: Municipality or postal code
 Comparaison statuts: Status comparison
 Continuer: Continue
 Coronavirus: Coronavirus
@@ -1293,6 +1294,16 @@ selectionRégime:
     urssaf: The figures are indicative and do not replace the actual accounts of the
       Urssaf, impots.gouv.fr, etc
 simulateurs:
+  explanation:
+    CNAPL: It recovers contributions related to your retirement and disability/death
+      plan.
+    pamc: <0><0>Your partner institutions</0><1><0><0><0></0></0><1>Contributions
+      collected by URSSAF, which are used to finance social security (health
+      insurance, family allowances, dependency
+      care).</1><2><0></0></2></0><1></1><2><0><0><0></0></0><1>As a contracted
+      health professional, you benefit from having part of your contributions
+      covered by the Assurance Maladie.</1><2><0></0>
+      <2></2></2></0></2></1></0>
   inversionFail: >-
     The amount entered results in an impossible result. This is due to a
     threshold effect in the calculation of contributions.
@@ -1302,6 +1313,8 @@ simulateurs:
   précision:
     défaut: "Refine the simulation by answering the questions:"
   warning:
+    année-courante: The amount of the contributions is calculated for an income over
+      the year 2020.
     artiste-auteur:
       "1": This estimate is provided for information purposes. It is based on the
         applicable regulatory elements and the elements that you have entered,
