:art: Améliore la présentation de l'intégration iframe
- Remplace vie privée par donnée personelle
- Ajoute petit texte + lien mon-entreprise.fr
- Enlève taille minimale

--- a/mon-entreprise/source/locales/ui-en.yaml
+++ b/mon-entreprise/source/locales/ui-en.yaml
@@ -67,6 +67,7 @@ Exonérations: Exemptions
 Explorez notre documentation: Explore our documentation
 Faire une simulation: Launch a simulation
 Fiche de paie: Payslip
+Gestion des données personnelles: Management of personal data
 Guide du statut juridique: Legal status guide
 Gérant majoritaire: Chairman
 Gérant minoritaire: Managing director
